--- a/pulsecollab_backend/package.json
+++ b/pulsecollab_backend/package.json
@@ -1,39 +1,66 @@
 {
   "name": "pulsecollab_backend",
   "version": "1.0.0",
+  "description": "PulseCollab backend API server",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "build": "npm run test",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "migrate": "node scripts/migrate.js",
+    "seed": "node scripts/seed.js"
   },
+  "keywords": [
+    "collaboration",
+    "team-management",
+    "project-management",
+    "real-time",
+    "chat",
+    "video-calling"
+  ],
+  "author": "PulseCollab Team",
+  "license": "MIT",
   "dependencies": {
+    "axios": "^1.11.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
-    "dotenv": "^16.3.1",
+    "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.10.1",
+    "pg": "^8.16.3",
+    "pg-pool": "^3.10.1",
+    "qrcode": "^1.5.4",
+    "redis": "^4.7.1",
+    "simple-peer": "^9.11.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "speakeasy": "^2.0.0",
     "uuid": "^12.0.0",
-    "simple-peer": "^9.11.1",
-    "node-cron": "^3.0.3",
-    "pg": "^8.11.3",
-    "pg-pool": "^3.6.1",
-    "joi": "^17.11.0",
-    "winston": "^3.11.0",
-    "axios": "^1.6.2",
-    "nodemailer": "^6.9.7",
-    "qrcode": "^1.5.3",
-    "moment": "^2.29.4"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
+    "eslint": "^8.55.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
-    "jest": "^29.7.0"
+    "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
